crates/ruff_linter/src/rules/ssort/snapshots/ruff_linter__rules__ssort__tests__top_level_statement.py_narrative.snap
---
source: crates/ruff_linter/src/rules/ssort/mod.rs
---
SS001 [*] Statements are unsorted
 --> top_level_statement.py:1:1
  |
1 | / f = [dependency() for _ in range(3)]
2 | |
3 | | def dependency():
4 | |     return True
  | |_______________^
  |
help: Organize statements
  - f = [dependency() for _ in range(3)]
  - 
1 | def dependency():
2 |     return True
3 + 
4 + f = [dependency() for _ in range(3)]
