crates/ruff_linter/src/rules/ssort/snapshots/ruff_linter__rules__ssort__tests__walrus.py_dependency.snap
---
source: crates/ruff_linter/src/rules/ssort/mod.rs
---
SS001 [*] Statements are unsorted
 --> walrus.py:1:1
  |
1 | / def fun():
2 | |     if (a := nofun()):
3 | |         return a
4 | |     else:
5 | |         return True
6 | | def nofun():
7 | |     return False
  | |________________^
  |
help: Organize statements
1 + def nofun():
2 +     return False
3 | def fun():
4 |     if (a := nofun()):
5 |         return a
6 |     else:
7 |         return True
  - def nofun():
  -     return False
